# Merseburg-incantation

./: CMakeLists.txt  LICENSE  MersebergConfig.cmake.in  README.org  conanfile.py
docs/: CMakeLists.txt  doxygen.cfg.in
include/: CMakeLists.txt  config.h.in
include/merseberg/: merseberg.h
test_package/: conanfile.py
tests/: CMakeLists.txt  simple_test.cpp
